--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.1",
     "react-bnb-gallery": "^1.4.4",
     "react-dom": "^17.0.1",
